[package]
name = "boluo-macros"
version = "0.1.1"
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"
description = "boluo的宏"
keywords = ["http", "web", "framework", "async"]
categories = ["asynchronous", "network-programming", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
