[package]
name = "compat-tower"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boluo = { path = "../../boluo" }
tokio = { version = "1", features = ["full"] }
http = "1"
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["add-extension"] }
