[package]
name = "compat_tower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boluo = { path = "../../boluo" }
tokio = { version = "1", features = ["full"] }
http = "1"
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["add-extension"] }
